--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
 
         <input type="text" v-on:input="changeTitle">
-        <p> {{ title }}</p>
+        <p> {{ sayHello() }}</p>
 
     </div>
 
@@ -23,6 +23,9 @@
             methods: {
                 changeTitle: function (event) {
                     this.title = event.target.value;
+                },
+                sayHello: function() {
+                    return this.title;
                 }
             }
         });
