--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
 
         <input type="text" v-on:input="changeTitle">
-        <p> {{ sayHello() }}</p>
+        <p> {{ sayHello() }} - <a v-bind:href="link">Google</a></p>
 
     </div>
 
@@ -18,7 +18,8 @@
         new Vue({
             el: "#app",
             data: {
-                title: "Hello World!"
+                title: "Hello World!",
+                link: "http://google.com"
             },
             methods: {
                 changeTitle: function (event) {
